# domain-embedding-finetuner

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
docker/: Dockerfile.gpu
scripts/: ci_smoke.sh  download_llama3.py  make_eval_holdout.py
src/: demo.py  evaluate.py  finetune.py  generate.py  ingest.py  prompts.py  rerank.py  retrieval.py  utils.py
tests/: test_evaluate.py  test_finetune.py  test_generate.py  test_ingest.py  test_pipeline.py  test_utils.py
